kubernetes/loculus/docs/rendered/preview-server/lapis-service.yaml
# Source: loculus/templates/lapis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loculus-lapis-service-cchf
spec:
  type: ClusterIP
  selector:
    app: loculus
    component: lapis-cchf
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
---
# Source: loculus/templates/lapis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loculus-lapis-service-dummy-organism
spec:
  type: ClusterIP
  selector:
    app: loculus
    component: lapis-dummy-organism
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
---
# Source: loculus/templates/lapis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loculus-lapis-service-dummy-organism-with-files
spec:
  type: ClusterIP
  selector:
    app: loculus
    component: lapis-dummy-organism-with-files
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
---
# Source: loculus/templates/lapis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loculus-lapis-service-ebola-sudan
spec:
  type: ClusterIP
  selector:
    app: loculus
    component: lapis-ebola-sudan
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
---
# Source: loculus/templates/lapis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loculus-lapis-service-enteroviruses
spec:
  type: ClusterIP
  selector:
    app: loculus
    component: lapis-enteroviruses
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
---
# Source: loculus/templates/lapis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loculus-lapis-service-not-aligned-organism
spec:
  type: ClusterIP
  selector:
    app: loculus
    component: lapis-not-aligned-organism
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
---
# Source: loculus/templates/lapis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loculus-lapis-service-west-nile
spec:
  type: ClusterIP
  selector:
    app: loculus
    component: lapis-west-nile
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
---
